# Argon2CMake

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-test.yml
Test/: CMakeLists.txt  main.cpp
